# aoc-template

./: Cargo.toml  README.md  cargo-generate.toml  main.rs
src/: main.rs
