[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if within_cargo_project %}
nom.workspace = true
num.workspace = true
thiserror.workspace = true
itertools.workspace = true
color-eyre.workspace = true
pretty_assertions.workspace = true
{% else %}
nom = "7.1.1"
num = "0.4.0"
thiserror = "1.0.37"
itertools = "0.10.5"
color-eyre = "0.6.2"
pretty_assertions = "1.3.0"
{% endif %}
